--- a/3 CSS/index.html
+++ b/3 CSS/index.html
@@ -1,187 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+<title>Facebook Style Homepage Design using HTML and CSS</title>
 <head>
-<title>Facebook </title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+<link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-<div id="navwrapper">
-<div id="navbar"> <table class="tablewrapper">
-<tr>
-<td class="row1">Email or Phone</td>
-<td class="row1">Password</td>
-</tr>
-<tr>
-<td><input type="text" class="inputtext">
-</td>
-<td><input type="text" class="inputtext">
-</td>
-<td><div id="button">Log In</div></td>
-</tr>
-<tr>
-<td>
-<div class="row2"><input type="checkbox" checked>Keep me logged in</div></td>
-<td class="row2 h">Forgot your password?</td>
-</table>
-
-<h1 class="logowrapper">facebook</h1>
-
-</div>
-</div>
-
-<div id="contentwrapper">
-<div id="content">
-
-
-
-
-<div id="leftbod">
-
-<div class="connect bolder">
-Connect with friends and the
-world around you on Facebook.</div>
-
-<div class="leftbar">
-<img src="img1.PNG" alt="img1" class="iconwrap fb1"/>
-<div class="fb1">
-<span class="rowtext">See photos and updates</span>
-<span class="rowtext2 fb1">from friends in News Feed</span>
-</div>
-</div>
-
-<div class="leftbar">
-<img src="img2.PNG" alt="img2" class="iconwrap fb1"/>
-<div class="fb1">
-<span class="rowtext">Share what's new</span>
-<span class="rowtext2 fb1">in your life on your timeline</span>
-</div>
-</div>
-
-<div class="leftbar">
-<img src="img3.png" alt="img3" class="iconwrap fb1"/>
-<div class="fb1">
-<span class="rowtext">Find more</span>
-<span class="rowtext2 fb1">of what you're looking for with graph search</span>
-</div>
-</div>
-</div>
-<div id="rightbod">
-<div class="signup bolder">Sign Up</div>
-<div class="free bolder">It's free and always will be</div>
-<div class="formbox">
-<input type="text" class="inputbody in1" placeholder="First name">
-<input type="text" class="inputbody in1 fr" placeholder="Last name">
-</div>
-<div class="formbox">
-<input type="text" class="inputbody in2" placeholder="Email or mobile number">
-</div>
-<div class="formbox">
-
-
-
-
-<input type="text" class="inputbody in2" placeholder="Re-enter email or mobile number">
-</div>
-<div class="formbox">
-<input type="text" class="inputbody in2" placeholder="New password">
-</div>
-<div class="formbox">
-<div class="bday">Birthday</div>
-</div>
-<div class="formbox">
-<span data-type="selectors">
-<span>
-<select title="Month" class="selectbody f1">
-<option value="0" selected="1">Month</option>
-<option value="1">Jan</option>
-<option value="2">Feb</option>
-<option value="3">Mar</option>
-<option value="4">Apr</option>
-<option value="5">May</option>
-<option value="6">Jun</option>
-<option value="7">Jul</option>
-<option value="8">Aug</option>
-<option value="9">Sep</option>
-<option value="10">Oct</option>
-<option value="11">Nov</option>
-<option value="12">Dec</option>
-</select>
-<select title="Day" class="selectbody fl">
-<option value="0" selected="1">Day</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-<option value="7">7</option>
-<option value="8">8</option>
-<option value="9">9</option>
-<option value="10">10</option>
-<option value="11">11</option>
-<option value="12">12</option>
-<option value="13">13</option>
-<option value="14">14</option>
-
-
-
-
-<option value="15">15</option>value="23">23</option>
-<option value="24">24</option>
-<option value="25">25</option>
-<option value="26">26</option>
-<option value="27">27</option>
-<option value="28">28</option>
-<option value="29">29</option>
-<option value="30">30</option>
-<option value="31">31</option></select>
-<select title="Year" class="selectbody fl">
-<option value="0" selected="1">Year</option>
-<option value="2015">2021</option>
-<option value="2015">2020</option>
-<option value="2015">2019</option>
-<option value="2015">2017</option>
-<option value="2015">2016</option>
-
-
-
-
-
-<option value="1967">1967</option>
-<option value="1966">1966</option>
-</select>
-</span>
-<div class="fb1 why h">Why do I need to provide my birthday?</div></div>
-<div class="formbox mt1">
-<span data-type="radio" class="spanpad">
-<input type="radio" id="fem" class="m0">
-<label for="fem" class="gender">Female
-</label>
-<input type="radio" id="male" class="m0">
-<label for="male" class="gender">Male
-</label>
-</span>
-
-
-
-
-</div>
-<div class="formbox">
-<div class="agree">
-By clicking Sign Up, you agree to our <div class="link">Terms</div> and that you have read our <div class="link">Data Use Policy</div>, including our <div class="link">Cookie Use</div>.
-</div>
-</div>
-<div class="formbox">
-<button type="submit" class="signbut bolder">Sign Up</button>
-</div>
-<div class="formbox">
-<div class="create"><div class="link h">Create a Page</div> for a celebrity, band or business.</div>
-</div>
-</div>
-</div>
+ <div class="fb-header-base">
+ </div>
+ <div class="fb-header">
+	<div id="img1" class="fb-header"><img src="facebook.png" /></div>
+	<div id="form1" class="fb-header">Email or Phone<br>
+	<input placeholder="Email" type="mail" name="name" /><br>
+	<input type="checkbox" />keep me logged in</div>
+	<div id="form2" class="fb-header">Password<br>
+	<input placeholder="Password" type="password" name="password" /><br>
+	Forgotten your password?
+	</div>
+	</div>
+ </div>
+	 <input type="submit" class="submit1" value="login" />
+ <div class="fb-body">
+	<div id="intro1" class="fb-body">Facebook helps you 
+	 connect and share with the <br>
+	 people in your life.</div>
+	 <div id="intro2" class="fb-body">Create an account</div>
+	 <div id="img2" class="fb-body"><img src="world.png" /></div>
+	 <div id="intro3" class="fb-body">It's free and always will be.</div>
+	 <div id="form3" class="fb-body">
+	 <input placeholder="First Name" type="text" id="namebox" name="name1" />
+	 <input placeholder="Last Name" type="text" id="namebox"  /> <br>
+	 <input placeholder="Emai" type="text" id="mailbox" /><br>
+	 <input placeholder="Re-enter email" type="text" id="mailbox"  /><br>
+	 <input placeholder="Password" type="password" id="mailbox"  /><br>
+	 <input type="date" id="namebox"  /><br><br>
+	 <input type="radio" id="r-b" name="sex" value="male" />Male
+	 <input type="radio" id="r-b" name="sex" value="female" />Female<br><br>
+	 <p id="intro4">By clicking Create an account, you agree to
+	 our Terms and that you have read our Data Policy, 
+	 including our Cookie Use.</p>
+	 <input type="submit" class="button2" value="Create an account" />
+	 <br><hr>
+	 <p id="intro5">Create a Page for a celebrity, band or business.</p>
+	 </div>
+	 </div>
+<div class="fb-body-footer">
+	<div id="fb-body-footer-base" class="fb-body-footer">English (UK)<br><hr>
+	Sign Up	Log In	&copy; www.coderglass.com &nbsp;&nbsp; 
+	Design by Varun Singh</div>
 </div>
 </body>
+</html>
